# namo-setu-modit

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  ENHANCEMENTS.md  Enterprise_System_Architecture_Namo_Setu_MODIT.md  Makefile  Product_Discovery_SRS_Namo_Setu_MODIT.md  README.md  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway-start.sh  railway.json  requirements.txt  tsconfig.base.json  tsconfig.base.tsbuildinfo
.github/workflows/: ci.yml
apps/modit/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/namo-setu/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260701_0001_initial_schema.py  20260707_0001_add_enterprise_tables.py
backend/app/: main.py
backend/app/api/: base.py  deps.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  rbac.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  enums.py  modit.py  namo_setu.py  shared.py  user.py
backend/app/repositories/: base.py
backend/app/schemas/: admin.py  ai.py  analytics.py  auth.py  (+10 more)
backend/seeds/: modit_seeds.py  namo_seeds.py  runner.py
backend/tests/: conftest.py  test_admin.py  test_ai.py  test_auth_extended.py  test_health.py  test_maps.py  test_modit.py  test_namo_routes.py  test_namo_services.py  test_notification.py  test_payment.py  test_review.py  test_security.py
infra/nginx/: default.conf
(+127 files in other folders)
